istio/gob-minikube/gen.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: gen
spec:
  selector:
    app: gen

  ports:
    - name: grpc
      port: 8080
