istio/gob-minikube/web.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: web
spec:
  selector:
    app: web

  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 8080
