istio/gob-minikube/word.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: word
spec:
  selector:
    app: word

  ports:
    - name: grpc
      port: 8080
