istio/gob-minikube/gob-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gob-ingress
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: web
          servicePort: http
